--- a/aal_eficiency/EnergyReaderPublisher/pom.xml
+++ b/aal_eficiency/EnergyReaderPublisher/pom.xml
@@ -3,13 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-	<groupId>org.universAAL.AALapplication</groupId>
-    <artifactId>new_services.pom</artifactId>
-    <version>C.0</version>
+	<groupId>org.universAAL.support.samples</groupId>
+    <artifactId>samples.pom</artifactId>
+    <version>1.2.1-SNAPSHOT</version>
+    <relativePath>../samples.pom</relativePath>
 	</parent>
 	<packaging>bundle</packaging>
+	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>EnergyReaderPublisher</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.2-SNAPSHOT</version>
 	<name>Energy Reader Service</name>
 	<url />
 	<dependencies>		
@@ -27,9 +29,9 @@
 			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
     	<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.20</version>
+			    <groupId>org.apache.derby</groupId>
+			    <artifactId>derby</artifactId>
+			    <version>10.7.1.1</version>
 		</dependency>
     	<dependency>
     		<groupId>org.universAAL.ontology</groupId>
@@ -49,7 +51,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.EnergyReader</Export-Package>
-						<Import-Package>com.mysql.jdbc,*</Import-Package>
+						<Import-Package>org.apache.derby.jdbc,*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
