--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -18,11 +18,22 @@
         <configuration>
           <args>pax.configuration</args>
           <provision>
-          <!--          agenda C.0.1-->
+          <!--          agenda C.0.1-SNAPSHOT -->
 			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.0-2MODALITIES/composite</provision>
 			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.0/composite</provision>
 			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.0/composite</provision>
 			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.0.1-SNAPSHOT/composite</provision>
+
+<!--			uim fw-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.1-2MODALITIES/composite</provision> -->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.1-SNAPSHOT/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.2-SNAPSHOT/composite@{opt:update}</provision>-->
+<!--					<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/1.2.2-SNAPSHOT/composite</provision>-->
+
+
+
+<!--					<provision>mvn:org.universAAL.tools/tools.log_mon/1.2.1-SNAPSHOT</provision>-->
+
 	 </provision>
         </configuration>	
       </plugin>    	
