--- a/agenda/agenda.client/pom.xml
+++ b/agenda/agenda.client/pom.xml
@@ -2,19 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>C.0.1-SNAPSHOT</version>
+		<!-- for testing 1.2.2-SNAPSHOT web handler above line replaced with below one-->
+		<!--	<version>1.2.2-SNAPSHOT</version> -->
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
-	
+
 	<artifactId>agenda.client</artifactId>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Client</name>
 	<description>Agenda Consumer, used by Agenda GUI</description>
-	
+
 	<dependencies>
 		<!--		<dependency>-->
 		<!--			<groupId>junit</groupId>-->
@@ -53,7 +55,7 @@
 			<artifactId>ont.agenda</artifactId>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -66,8 +68,12 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Activator>org.universAAL.agenda.client.osgi.Activator</Bundle-Activator>
-<!--						these 2 packages have to be exported because they are used (imported) by agenda.gui-->
-						<Export-Package>org.universAAL.agenda.client, org.universAAL.agenda.client.osgi</Export-Package>
+						<!--
+							these 2 packages have to be exported because they are used
+							(imported) by agenda.gui
+						-->
+						<Export-Package>org.universAAL.agenda.client,
+							org.universAAL.agenda.client.osgi</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
