--- a/agenda/agenda.pom/composite/pom.xml
+++ b/agenda/agenda.pom/composite/pom.xml
@@ -7,6 +7,8 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
 		<version>C.0.1-SNAPSHOT</version>
+		<!-- for testing 1.2.2-SNAPSHOT web handler above line replaced with below one-->
+<!--		<version>1.2.2-SNAPSHOT</version>-->
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.composite</artifactId>
