--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -6,11 +6,14 @@
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<version>C.0</version>
+<!-- for testing 1.2.2-SNAPSHOT web handler above line replaced with below one-->
+<!--		<version>1.1.2-SNAPSHOT</version>-->
 		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
-	
 	<artifactId>agenda.pom</artifactId>
 	<version>C.0.1-SNAPSHOT</version>
+<!-- for testing 1.2.2-SNAPSHOT web handler above line replaced with below one-->
+<!--		<version>1.2.2-SNAPSHOT</version>-->
 	<packaging>pom</packaging>
 	
 	<name>Agenda AAL Service Parent POM</name>
