--- a/nutritional/nutritional.uiclient.basic/pom.xml
+++ b/nutritional/nutritional.uiclient.basic/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>nutritional.uiclient.basic</artifactId>
-	<version>C.0.1-SNAPSHOT</version>
+	<version>C.0.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<dependencies>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>medication.manager.ont</artifactId>
-			<version>1.1.1-SNAPSHOT</version> <!-- TODO: Change this to 1.2.0 when available -->
+			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Nutritional own libs -->
