--- a/medication/medication.manager.ui.runner/runner/felix/config.ini
+++ b/medication/medication.manager.ui.runner/runner/felix/config.ini
@@ -76,8 +76,11 @@ felix.auto.start.5=\
 "file:bundles/ont.aalfficiency_1.2.0.jar" \
 "file:bundles/ui.dm.mobile_1.2.0.jar" \
 "file:bundles/ui.handler.gui.swing_1.2.0.jar" \
-"file:bundles/medication.manager.ui_1.2.0.jar" \
+"file:bundles/ont.healthmeasurement_1.2.1.SNAPSHOT.jar" \
+"file:bundles/ont.disease_1.2.1.SNAPSHOT.jar" \
+"file:bundles/ont.health_1.2.1.SNAPSHOT.jar" \
 "file:bundles/medication.manager.ont_1.2.0.SNAPSHOT.jar" \
+"file:bundles/medication.manager.ui_1.2.0.jar" \
 "file:bundles/medication.missing.services.simulation_1.2.0.jar" \
 "file:bundles/medication.manager.service_1.2.0.jar" \
 "file:bundles/medication.manager.shell.commands_1.2.0.jar"
