--- a/medication/medication.manager.ui/pom.xml
+++ b/medication/medication.manager.ui/pom.xml
@@ -40,7 +40,7 @@
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Private-Package>org.universAAL.AALapplication.medication_manager.ui.impl</Private-Package>
-            <Export-Package>org.universAAL.AALapplication.medication_manager.ui</Export-Package>
+            <Export-Package>org.universAAL.AALapplication.medication_manager.ui.*</Export-Package>
           </instructions>
         </configuration>
       </plugin>      
