--- a/medication/medication.manager.ont/pom.xml
+++ b/medication/medication.manager.ont/pom.xml
@@ -49,7 +49,11 @@
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.profile</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.universAAL.ontology</groupId>
+      <artifactId>ont.health</artifactId>
+      <version>1.2.1-SNAPSHOT</version>
+    </dependency>
 
   </dependencies>
 
