--- a/.gitattributes
+++ b/.gitattributes
@@ -2834,6 +2834,7 @@ medication/medication.manager.ui.runner/runner/configurations/ctxt.che/store/val
 medication/medication.manager.ui.runner/runner/configurations/ctxt.che/store/values.hash -text
 medication/medication.manager.ui.runner/runner/configurations/ctxt.che/store/values.id -text
 medication/medication.manager.ui.runner/runner/configurations/mw.bus.model.osgi/sodapop.key -text
+medication/medication.manager.ui.runner/runner/configurations/services/medication_manager/prescriptions/1.xml -text
 medication/medication.manager.ui.runner/runner/configurations/services/org.ops4j.pax.logging.properties -text
 medication/medication.manager.ui.runner/runner/configurations/ui.dm.mobile/main_menu_bg.txt -text
 medication/medication.manager.ui.runner/runner/configurations/ui.dm.mobile/main_menu_de.txt -text
