--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -1,17 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL</groupId>
 		<artifactId>uAAL.pom</artifactId>
-		<version>1.2.0</version>
+		<version>1.2.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>new_services.pom</artifactId>
-	<version>C.0</version>
-	
+	<version>C.1</version>
 	<packaging>pom</packaging>
 	<name>Parent POM for all AAL services</name>
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
@@ -24,17 +23,17 @@
 		<module>../medication/medication.manager.pom</module>
 		<module>../agenda/agenda.pom</module>
 	</modules>
-	
+
 	<properties>
 		<remoteOBR />
 		<!-- Default configuration for compiler source and target JVM -->
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
 		<gforge.project.name>new_services</gforge.project.name>
-		<platform.version>1.2.0</platform.version>
+		<platform.version>1.2.1-SNAPSHOT</platform.version>
 		<service.name.svn></service.name.svn>
 	</properties>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -74,7 +73,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ui</groupId>
-  				<artifactId>ui.pom</artifactId>
+				<artifactId>ui.pom</artifactId>
 				<version>${platform.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
@@ -87,27 +86,27 @@
 		<developerConnection>${svn.base}/${service.name.svn}/${project.artifactId}</developerConnection>
 		<url>${svn.base.url}${service.name.svn}%2F${project.artifactId}</url>
 	</scm>
-	
+
 	<build>
-	<pluginManagement>
-	 	<plugins>	 	
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Version>${platform.version}</Bundle-Version>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</pluginManagement>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<extensions>true</extensions>
+					<configuration>
+						<instructions>
+							<Bundle-Name>${project.name}</Bundle-Name>
+							<Bundle-Description>${project.description}</Bundle-Description>
+							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+							<Bundle-Version>${platform.version}</Bundle-Version>
+						</instructions>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-	
+
 	<repositories>
 		<repository>
 			<id>uaal</id>
