--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -5,8 +5,7 @@
   <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>agenda.runner</artifactId>
   <packaging>jar</packaging>  
-  <version>C.0.1-SNAPSHOT</version>
-  <!-- version is here equal to the level of version of the middleware -->
+  <version>C.1.1-SNAPSHOT</version>
   <name>Runner Folder</name>
 
   <build>
@@ -19,10 +18,16 @@
           <args>pax.configuration</args>
           <provision>
           <!--          agenda C.0.1-SNAPSHOT -->
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.0-2MODALITIES/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.0/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.0/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.0.1-SNAPSHOT/composite</provision>
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.0-2MODALITIES/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.0/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.0/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.0.1-SNAPSHOT/composite</provision>-->
+
+    <!--          agenda C.1.1-SNAPSHOT -->
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.2.10-SNAPSHOT/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.2-SNAPSHOT/composite</provision>
+		<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.3-SNAPSHOT/composite</provision>
+			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.1.1-SNAPSHOT/composite</provision>
 
 <!--			uim fw-->
 <!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.1-2MODALITIES/composite</provision> -->
