--- a/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
@@ -3,5 +3,7 @@
 gui.location=Unkown
 nested.subdialogs=false
 queued.forms=false
-LookandFeel.package=org.universAAL.ui.handler.gui.swing.defaultLookAndFeel
+#LookandFeel.package=org.universAAL.ui.handler.gui.swing.defaultLookAndFeel
+#LookandFeel.package=org.universAAL.ui.handler.gui.swing.classic
+LookandFeel.package=org.universAAL.ui.gui.swing.waveLAF
 demo.mode=true
