configs for gui handler and dm update

--- a/.gitattributes
+++ b/.gitattributes
@@ -271,6 +271,22 @@ agenda/agenda.runner/runner/configurations/agenda/credentials.properties -text
 agenda/agenda.runner/runner/configurations/ctxt.che/CHe.properties -text
 agenda/agenda.runner/runner/configurations/mw.bus.model.osgi/sodapop.key -text
 agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_jack.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_jack_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_jack_es.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_jack_hr.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_saied.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_saied_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_saied_es.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/main_menu_saied_hr.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/mainmenu_jack.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/mainmenu_saied.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages_de.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages_el.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages_en.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages_es.properties -text
+agenda/agenda.runner/runner/configurations/ui.dm-old/messages_hr.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_bob_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_gui_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/main_menu_jack_es.txt -text
@@ -287,22 +303,77 @@ agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_el.properties -
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_en.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_es.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_gui_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_es.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_nutritionist_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_remoteUser_hr.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_en.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_es.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_hr.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_saied.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_de.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_el.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_en.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_es.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/messages_hr.properties -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/app/Health.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/app/Nutritional_Advisor.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/app/Personal_Agenda.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/app/Personal_Safety.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Dialogs/Accept.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Dialogs/Alert.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Dialogs/Deny.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Dialogs/Tip.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Dialogs/Tip2.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Add.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Copy.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Cut.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Edit.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Paste.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Redo.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Remove.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Search.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Undo.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Zoom[!!-~]in.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Edit/Zoom[!!-~]out.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Close.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Delete.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/File[!!-~]new.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/File.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/File2.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Lock.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Print.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Save.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/File/Unlock.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Configuration.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Down.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Favorite.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Home.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Reload.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Right.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Search.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/Up.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Navigation/left.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Camera.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Cart.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Desktop.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Desktop2.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Mail.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Power.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Telephon.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/User.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/Wireless.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Office/World.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/FF[!!-~]2.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/FF.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/FR.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/FR2.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/Pause.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/Play.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/Record.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Playback/Stop.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Web/Facebook.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Web/Linkdin.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Web/Twitter.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/common/Web/Youtube.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/Dialogs.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/EXIT.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/Home.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/PendingMsg.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/UCC.png -text
+agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/system/Ustore.png -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/formsPrototypeProperties.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui/formsPrototypes.properties -text
