--- a/.gitattributes
+++ b/.gitattributes
@@ -305,6 +305,7 @@ agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_es.properties -
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_jack.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_saied.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_en.properties -text
