--- a/health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/pom.xml
+++ b/health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/pom.xml
@@ -40,7 +40,11 @@
 			<artifactId>bluecove</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-
+<dependency>
+ <groupId>org.universAAL.ontology</groupId>
+ <artifactId>ont.drools</artifactId>
+ <version>C.0.1-SNAPSHOT</version>
+</dependency>
 	</dependencies>
 
 	<build>
