--- a/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
@@ -5,5 +5,6 @@ nested.subdialogs=false
 queued.forms=false
 #LookandFeel.package=org.universAAL.ui.handler.gui.swing.defaultLookAndFeel
 #LookandFeel.package=org.universAAL.ui.handler.gui.swing.classic
+#do not forget to include bundle in running conf (mvn:org.universAAL.ui/gui.swing.waveLAF/1.2.2-SNAPSHOT)
 LookandFeel.package=org.universAAL.ui.gui.swing.waveLAF
 demo.mode=true
