--- a/.gitattributes
+++ b/.gitattributes
@@ -316,10 +316,14 @@ agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_el.properties -
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_en.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_es.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm.mobile/messages_hr.properties -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack_en.txt -text
-agenda/agenda.runner/runner/configurations/ui.dm/main_menu_saied_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/-main_menu_jack_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/-main_menu_saied_en.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/README.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/main_menu_jack.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_jack.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_jack_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_saied.txt -text
+agenda/agenda.runner/runner/configurations/ui.dm/mainmenu_saied_en.txt -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages.properties -text
 agenda/agenda.runner/runner/configurations/ui.dm/messages_en.properties -text
 agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/icons/app/Health.png -text
