--- a/agenda/agenda.runner/pom.xml
+++ b/agenda/agenda.runner/pom.xml
@@ -19,10 +19,10 @@
           <provision>
     <!--          agenda C.1.1-SNAPSHOT -->
 			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.2.12-SNAPSHOT/composite</provision>
-			<provision>wrap:mvn:org.universAAL.ui/gui.swing.waveLAF/1.2.2-SNAPSHOT</provision>
+			<provision>wrap:mvn:org.universAAL.ui/gui.swing.bluesteelLAF/1.2.2-SNAPSHOT</provision>
 			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.gui.swing/1.2.2-SNAPSHOT/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.3-SNAPSHOT/composite</provision>
-			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.1.1-SNAPSHOT/composite</provision>
+<!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.handler.web/1.2.3-SNAPSHOT/composite</provision>-->
+<!--			<provision>scan-composite:mvn:org.universAAL.AALapplication/agenda.composite/C.1.1-SNAPSHOT/composite</provision>-->
 
 <!--			<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.2.1-2MODALITIES/composite</provision> -->
 <!--			<provision>mvn:org.universAAL.tools/tools.log_mon/1.2.1-SNAPSHOT</provision>-->
