--- a/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
+++ b/agenda/agenda.runner/runner/configurations/ui.handler.gui.swing/renderer.properties
@@ -1,10 +1,10 @@
 #Configuration file for SWING Renderer
 #Wed Mar 14 10:14:22 CET 2012
-gui.location=Unkown
+gui.location=Unknown
 nested.subdialogs=false
 queued.forms=false
 #LookandFeel.package=org.universAAL.ui.handler.gui.swing.defaultLookAndFeel
 #LookandFeel.package=org.universAAL.ui.handler.gui.swing.classic
-#do not forget to include bundle in running conf (mvn:org.universAAL.ui/gui.swing.waveLAF/1.2.2-SNAPSHOT)
+#do not forget to include bundle in running conf (e.g. wrap:mvn:org.universAAL.ui/ui.handler.gui.swing.bluesteelLAF/1.2.2-SNAPSHOT)
 LookandFeel.package=org.universAAL.ui.gui.swing.bluesteelLAF
 demo.mode=true
