--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -16,6 +16,7 @@
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
 
 	<modules>
+		<module>../ontologies/ont.pom</module>
 		<module>../health/health.pom</module>
 		<module>../personal_safety/personal_safety.pom</module>
 		<module>../food_shopping/pom</module>
@@ -75,6 +76,13 @@
 				<groupId>org.universAAL.ui</groupId>
 				<artifactId>ui.pom</artifactId>
 				<version>${platform.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.universAAL.ontology.services</groupId>
+				<artifactId>ont.pom</artifactId>
+				<version>1.3.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
