--- a/ontologies/ont.health/pom.xml
+++ b/ontologies/ont.health/pom.xml
@@ -2,37 +2,22 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.universAAL.ontology</groupId>
+		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 		<relativePath>../pom/</relativePath>
 	</parent>
 	
+	<groupId>org.universAAL.ontology</groupId>
   	<artifactId>ont.health</artifactId>
-  	<version>1.2.1-SNAPSHOT</version>
+  	<version>1.3.1-SNAPSHOT</version>
   	<name>HealthOntology</name>
  	<description>No description provided</description>
   	<packaging>bundle</packaging>
   	<properties>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	</properties>
-  	
-<!--   	remove when ont.healthmenasurement is included in ont.pom -->
-  	<dependencyManagement>
-  		<dependencies>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.healthmeasurement</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.disease</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
-			</dependency>
-  		</dependencies>
-  	</dependencyManagement>
-  	
+  		
     	<dependencies>
 			<dependency>
 				<groupId>org.universAAL.support</groupId>
