--- a/ont.disease/pom.xml
+++ b/ont.disease/pom.xml
@@ -5,7 +5,7 @@
     		<groupId>org.universAAL.ontology.services</groupId>
     		<artifactId>ont.pom</artifactId>
     		<version>1.3.1-SNAPSHOT</version>
-    		<relativePath>../pom/</relativePath>
+    		<relativePath>../ont.pom</relativePath>
 		</parent>
   	<groupId>org.universAAL.ontology</groupId>
   	<artifactId>ont.disease</artifactId>
