--- a/ont.questionnaireStrategy/pom.xml
+++ b/ont.questionnaireStrategy/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
 		<version>1.3.1-SNAPSHOT</version>
-		<relativePath>../pom/</relativePath>
+		<relativePath>../ont.pom</relativePath>
 	</parent>
 
 
