--- a/personal_safety/personal_safety.run/pom.xml
+++ b/personal_safety/personal_safety.run/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>personal_safety.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
+		<version>D.0.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -19,12 +19,12 @@
 				<configuration>
 					<args>pax.configuration</args>
 					<provision>
-						<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/1.1.0/composite</provision>
-						<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/1.1.0/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/1.3.0/composite</provision>
+						<provision>scan-composite:mvn:org.universAAL.ontology/ont.composite/1.3.0/composite</provision>
 
 						<!-- Platform -->
-						<provision>scan-composite:mvn:org.universAAL.ui/ui.dm.mobile/1.1.0/composite</provision>
-						<provision>mvn:org.universAAL.ui/ui.handler.gui.swing/1.1.2-SNAPSHOT</provision>
+						<provision>scan-composite:mvn:org.universAAL.ui/ui.dm/1.3.0/composite</provision>
+						<provision>mvn:org.universAAL.ui/ui.handler.gui.swing/1.3.0</provision>
 
 						<!-- Services -->
 						<provision>scan-composite:mvn:org.universAAL.AALapplication/personal_safety.service/${project.version}/composite</provision>
