--- a/ontologies/ont.pom/pom.xml
+++ b/ontologies/ont.pom/pom.xml
@@ -134,6 +134,7 @@
       <plugin>
         <groupId>org.universAAL.support</groupId>
         <artifactId>uaal-maven-plugin</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
