--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,10 @@ nutritional/nutritional.uiclient.basic/.classpath
 nutritional/nutritional.uiclient.basic/.project
 nutritional/nutritional.uiclient.basic/.settings
 nutritional/nutritional.uiclient.basic/target
+ontologies/ont.biomedicalsensors/.classpath
+ontologies/ont.biomedicalsensors/.project
+ontologies/ont.biomedicalsensors/.settings
+ontologies/ont.biomedicalsensors/target
 ontologies/ont.disease/.classpath
 ontologies/ont.disease/.project
 ontologies/ont.disease/.settings
